--- a/Desafio 01/index.html
+++ b/Desafio 01/index.html
@@ -31,7 +31,15 @@
          Estou em constante busca pelo desenvolvimento das minhas habilidades e conhecimentos. Meu objetivo é concluir minha formação e seguir a profissão que escolhi. Atualmente, estou em busca de oportunidades de estágio relacionadas à área de tecnologia.</p><br>
          <h2>Como falar comigo?</h2>
          <ul>
-            
+            <li>
+                <img src="linkedin.png" alt="logo linkedin">
+                <a href="https://www.linkedin.com/in/barros-rafael/" target="_blank">Linkedin</a></li>
+            <li>
+                <img src="behance.png" alt="logo Behance">
+                <a href="https://www.behance.net/barrosart" target="_blank">Behance</a></li>
+            <li>
+                <img src="github.png" alt="logo GitHub">
+                <a href="https://github.com/rafamel10" target="_blank">Github</a></li>
          </ul>
 </body>
 </html>
