--- a/Módulo 02/Ex001/cor01.html
+++ b/Módulo 02/Ex001/cor01.html
@@ -6,13 +6,20 @@
     <title>Cores em CSS</title>
 </head>
 <body>
+    <!--Representação por nomes-->
     <h2 style="background-color:blue;color: white;">Exemplo de cores</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium incidunt perferendis iste ex odit! Officia inventore ducimus, voluptates architecto reiciendis a provident quae fuga. Sequi minus sint sunt deleniti ea.</p>
+
+    <!--Representação por códigos hexadecimais-->
     <h2 style="background-color: #0000ff; color: #ffffff;">Exemplo de cores</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium incidunt perferendis iste ex odit! Officia inventore ducimus, voluptates architecto reiciendis a provident quae fuga. Sequi minus sint sunt deleniti ea.</p>
-    <h2>Exemplo de cores</h2>
+
+    <!--Usaando representação por hsl (hue, saturation, luminosity)-->
+    <h2 style="background-color: hsl(240, 100%, 50%); color: hsl(0, 0%, 100%);">Exemplo de cores</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium incidunt perferendis iste ex odit! Officia inventore ducimus, voluptates architecto reiciendis a provident quae fuga. Sequi minus sint sunt deleniti ea.</p>
-    <h2>Exemplo de cores</h2>
+
+    <!--Usando RGB-->
+    <h2 style="background-color: rgb(0, 0, 255); color: rgb(255, 255, 255);">Exemplo de cores</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium incidunt perferendis iste ex odit! Officia inventore ducimus, voluptates architecto reiciendis a provident quae fuga. Sequi minus sint sunt deleniti ea.</p>
 </body>
 </html>
