--- a/Módulo 02/Ex002/index.html
+++ b/Módulo 02/Ex002/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gradiente em Css</title>
+    <style>
+        *{/*Configuração global de Css*/
+            height: 100%;
+        }
+        body{background-image:linear-gradient(45deg, #6485E8, #64E8CC,#6D64E8);}
+    </style>
 </head>
 <body>
     <h1>Testando gradiente</h1>
