--- a/Módulo 02/Ex002/index.html
+++ b/Módulo 02/Ex002/index.html
@@ -8,7 +8,7 @@
         *{/*Configuração global de Css*/
             height: 100%;
         }
-        body{background-image:linear-gradient(45deg, #6485E8, #64E8CC,#6D64E8);}
+        body{background-image:linear-gradient(45deg, #6485E8, #64E8CC 20%,#6D64E8);}
     </style>
 </head>
 <body>
